--- a/package.json
+++ b/package.json
@@ -50,10 +50,20 @@
       "devDependencies": {
           "@types/node": "^20.10.0",
           "@vitejs/plugin-react-swc": "^3.10.2",
+          "typescript": "^5.6.2",
+          "@testing-library/jest-dom": "^6.6.3",
+          "@testing-library/react": "^16.0.1",
+          "jsdom": "^25.0.1",
+          "vitest": "^2.1.4",
           "vite": "6.3.5"
       },
       "scripts": {
           "dev": "vite",
-          "build": "vite build"
+          "build": "vite build",
+          "dev:server": "node server/server.js",
+          "start": "node server/server.js",
+          "typecheck": "tsc -p tsconfig.json --noEmit",
+          "test": "vitest",
+          "test:run": "vitest run"
       }
   }
