--- a/package.json
+++ b/package.json
@@ -45,7 +45,10 @@
           "recharts": "^2.15.2",
           "sonner": "^2.0.3",
           "tailwind-merge": "*",
-          "vaul": "^1.1.2"
+          "vaul": "^1.1.2",
+          "busboy": "^1.6.0",
+          "pdf-parse": "^1.1.1",
+          "mammoth": "^1.8.0"
       },
       "devDependencies": {
           "@types/node": "^20.10.0",
