--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
             "@testing-library/react": "^16.0.1",
             "@types/node": "^20.10.0",
             "@vitejs/plugin-react-swc": "^3.10.2",
+            "@vitest/coverage-v8": "^2.1.9",
             "autoprefixer": "^10.4.21",
             "jsdom": "^25.0.1",
             "postcss": "^8.5.6",
@@ -65,14 +66,15 @@
             "vite": "6.3.5",
             "vitest": "^2.1.4"
       },
-  "scripts": {
-      "dev": "vite",
-      "build": "vite build",
-      "dev:server": "node server/server.js",
-      "start": "node server/server.js",
-      "typecheck": "tsc -p tsconfig.json --noEmit",
-      "test": "vitest",
-      "test:run": "vitest run",
-      "tw:build": "tailwindcss -c tailwind.config.js -i src/styles/tw-utilities.css -o src/styles/tw-utilities.built.css --minify"
-  }
+      "scripts": {
+            "dev": "vite",
+            "build": "vite build",
+            "dev:server": "node server/server.js",
+            "start": "node server/server.js",
+            "typecheck": "tsc -p tsconfig.json --noEmit",
+            "test": "vitest",
+            "test:run": "vitest run",
+            "test:coverage": "vitest run --coverage",
+            "tw:build": "tailwindcss -c tailwind.config.js -i src/styles/tw-utilities.css -o src/styles/tw-utilities.built.css --minify"
+      }
 }
