Added PostHog production analytics

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,29 @@
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
 
+# Analytics (PostHog)
+# Choose separate keys for dev vs production so metrics don't mix.
+# Frontend (Vite) uses these public project keys for client analytics.
+VITE_POSTHOG_DEV_KEY=
+VITE_POSTHOG_PROD_KEY=
+# Optional override for ingestion host (defaults to https://us.i.posthog.com)
+VITE_POSTHOG_HOST=
+
+# Server-side ingestion (same project keys as above)
+POSTHOG_DEV_PROJECT_KEY=
+POSTHOG_PROD_PROJECT_KEY=
+# Ingestion host (defaults to https://us.i.posthog.com)
+POSTHOG_INGESTION_HOST=
+
+# Server-side querying for counters (HogQL)
+# Use personal API keys and project IDs for dev/prod.
+# API host defaults to https://app.posthog.com (or your region host, e.g. https://us.posthog.com)
+POSTHOG_API_HOST=
+POSTHOG_DEV_PROJECT_ID=
+POSTHOG_PROD_PROJECT_ID=
+POSTHOG_DEV_PERSONAL_API_KEY=
+POSTHOG_PROD_PERSONAL_API_KEY=
+
 # Optional server port (for server/server.js)
 PORT=8787
 
