--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,3 +31,5 @@ jobs:
       - name: Run tests
         run: npm run test:run
 
+      - name: Run analytics tests (focused)
+        run: npm run test:analytics
