--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # OpenAI API configuration (server-side only)
 # Rename this file to .env and fill in values. Do NOT commit your .env.
+# Also used for automatic documentation generation (npm run docs:generate)
 
 OPENAI_API_KEY=
 OPENAI_MODEL=gpt-4o-mini
