--- a/package.json
+++ b/package.json
@@ -1,88 +1,91 @@
 {
-      "name": "Job Seeker Toolkit",
-      "version": "0.1.0",
-      "private": true,
-      "type": "module",
-      "engines": {
-            "node": ">=20 <21"
-      },
-      "dependencies": {
-            "@mozilla/readability": "^0.5.0",
-            "@radix-ui/react-accordion": "^1.2.3",
-            "@radix-ui/react-alert-dialog": "^1.1.6",
-            "@radix-ui/react-aspect-ratio": "^1.1.2",
-            "@radix-ui/react-avatar": "^1.1.3",
-            "@radix-ui/react-checkbox": "^1.1.4",
-            "@radix-ui/react-collapsible": "^1.1.3",
-            "@radix-ui/react-context-menu": "^2.2.6",
-            "@radix-ui/react-dialog": "^1.1.6",
-            "@radix-ui/react-dropdown-menu": "^2.1.6",
-            "@radix-ui/react-hover-card": "^1.1.6",
-            "@radix-ui/react-label": "^2.1.2",
-            "@radix-ui/react-menubar": "^1.1.6",
-            "@radix-ui/react-navigation-menu": "^1.2.5",
-            "@radix-ui/react-popover": "^1.1.6",
-            "@radix-ui/react-progress": "^1.1.2",
-            "@radix-ui/react-radio-group": "^1.2.3",
-            "@radix-ui/react-scroll-area": "^1.2.3",
-            "@radix-ui/react-select": "^2.1.6",
-            "@radix-ui/react-separator": "^1.1.2",
-            "@radix-ui/react-slider": "^1.2.3",
-            "@radix-ui/react-slot": "^1.1.2",
-            "@radix-ui/react-switch": "^1.1.3",
-            "@radix-ui/react-tabs": "^1.1.3",
-            "@radix-ui/react-toggle": "^1.1.2",
-            "@radix-ui/react-toggle-group": "^1.1.2",
-            "@radix-ui/react-tooltip": "^1.1.8",
-            "busboy": "^1.6.0",
-            "cheerio": "^1.0.0-rc.12",
-            "class-variance-authority": "^0.7.1",
-            "clsx": "*",
-            "cmdk": "^1.1.1",
-            "embla-carousel-react": "^8.6.0",
-            "input-otp": "^1.4.2",
-            "jsdom": "^25.0.1",
-            "lucide-react": "^0.487.0",
-            "mammoth": "^1.8.0",
-            "next-themes": "^0.4.6",
-            "pdf-parse": "^1.1.1",
-            "react": "^18.3.1",
-            "react-day-picker": "^8.10.1",
-            "react-dom": "^18.3.1",
-            "react-hook-form": "^7.55.0",
-            "react-markdown": "^10.1.0",
-            "react-resizable-panels": "^2.1.7",
-            "recharts": "^2.15.2",
-            "remark-gfm": "^4.0.1",
-            "sonner": "^2.0.3",
-            "tailwind-merge": "*",
-            "posthog-js": "^1.166.0",
-            "vaul": "^1.1.2"
+  "name": "Job Seeker Toolkit",
+  "version": "0.1.0",
+  "private": true,
+  "type": "module",
+  "engines": {
+    "node": ">=20 <21"
+  },
+  "dependencies": {
+    "@mozilla/readability": "^0.5.0",
+    "@radix-ui/react-accordion": "^1.2.3",
+    "@radix-ui/react-alert-dialog": "^1.1.6",
+    "@radix-ui/react-aspect-ratio": "^1.1.2",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.4",
+    "@radix-ui/react-collapsible": "^1.1.3",
+    "@radix-ui/react-context-menu": "^2.2.6",
+    "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
+    "@radix-ui/react-hover-card": "^1.1.6",
+    "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-menubar": "^1.1.6",
+    "@radix-ui/react-navigation-menu": "^1.2.5",
+    "@radix-ui/react-popover": "^1.1.6",
+    "@radix-ui/react-progress": "^1.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
+    "@radix-ui/react-separator": "^1.1.2",
+    "@radix-ui/react-slider": "^1.2.3",
+    "@radix-ui/react-slot": "^1.1.2",
+    "@radix-ui/react-switch": "^1.1.3",
+    "@radix-ui/react-tabs": "^1.1.3",
+    "@radix-ui/react-toggle": "^1.1.2",
+    "@radix-ui/react-toggle-group": "^1.1.2",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "busboy": "^1.6.0",
+    "cheerio": "^1.0.0-rc.12",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "*",
+    "cmdk": "^1.1.1",
+    "embla-carousel-react": "^8.6.0",
+    "input-otp": "^1.4.2",
+    "jsdom": "^25.0.1",
+    "lucide-react": "^0.487.0",
+    "mammoth": "^1.8.0",
+    "next-themes": "^0.4.6",
+    "pdf-parse": "^1.1.1",
+    "posthog-js": "^1.166.0",
+    "react": "^18.3.1",
+    "react-day-picker": "^8.10.1",
+    "react-dom": "^18.3.1",
+    "react-hook-form": "^7.55.0",
+    "react-markdown": "^10.1.0",
+    "react-resizable-panels": "^2.1.7",
+    "recharts": "^2.15.2",
+    "remark-gfm": "^4.0.1",
+    "sonner": "^2.0.3",
+    "tailwind-merge": "*",
+    "vaul": "^1.1.2"
   },
   "devDependencies": {
-            "@testing-library/jest-dom": "^6.6.3",
-            "@testing-library/react": "^16.0.1",
-            "@types/node": "^20.10.0",
-            "@vitejs/plugin-react-swc": "^3.10.2",
-            "@vitest/coverage-v8": "^2.1.9",
-            "autoprefixer": "^10.4.21",
-            "jsdom": "^25.0.1",
-            "postcss": "^8.5.6",
-            "tailwindcss": "^3.4.17",
-            "typescript": "^5.6.2",
-            "vite": "6.3.5",
-            "vitest": "^2.1.4"
-      },
-      "scripts": {
-            "dev": "vite",
-            "build": "vite build",
-            "dev:server": "node server/server.js",
-            "start": "node server/server.js",
-            "typecheck": "tsc -p tsconfig.json --noEmit",
-            "test": "vitest",
-            "test:run": "vitest run",
-      "test:coverage": "vitest run --coverage",
-      "test:analytics": "vitest run server/analytics.test.ts server/stats.test.ts src/components/CoverLetterGenerator.analytics.test.tsx",
-      "tw:build": "tailwindcss -c tailwind.config.js -i src/styles/tw-utilities.css -o src/styles/tw-utilities.built.css --minify"
-      }
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.0.1",
+    "@types/node": "^20.10.0",
+    "@vitejs/plugin-react-swc": "^3.10.2",
+    "@vitest/coverage-v8": "^2.1.9",
+    "autoprefixer": "^10.4.21",
+    "husky": "^9.1.7",
+    "jsdom": "^25.0.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17",
+    "typescript": "^5.6.2",
+    "vite": "6.3.5",
+    "vitest": "^2.1.4"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "dev:server": "node server/server.js",
+    "start": "node server/server.js",
+    "typecheck": "tsc -p tsconfig.json --noEmit",
+    "test": "vitest",
+    "test:run": "vitest run",
+    "test:coverage": "vitest run --coverage",
+    "test:analytics": "vitest run server/analytics.test.ts server/stats.test.ts src/components/CoverLetterGenerator.analytics.test.tsx",
+    "tw:build": "tailwindcss -c tailwind.config.js -i src/styles/tw-utilities.css -o src/styles/tw-utilities.built.css --minify",
+    "docs:generate": "node scripts/generate-docs.js",
+    "prepare": "husky"
+  }
 }
